# apps.home.bt-syspopup

./: CMakeLists.txt  org.tizen.bt-syspopup-m.manifest  org.tizen.bt-syspopup-w.manifest
data/: custom_popup.edc  custom_popup_m.edc  org.tizen.bt-syspopup-m.efl  org.tizen.bt-syspopup-w.efl  org.tizen.bt-syspopup-w.xml
mobile/data/: custom_popup.edc
mobile/src/: bt-syspopup.h
packaging/: org.tizen.bt-syspopup.spec
src/: bt-syspopup-m.c  bt-syspopup-m.h  bt-syspopup-w.c  bt-syspopup-w.h  bt-syspopup.c  bt-syspopup.h
wearable/: CMakeLists.txt  org.tizen.bt-syspopup.manifest
wearable/data/: custom_popup.edc  org.tizen.bt-syspopup.rule  org.tizen.bt-syspopup.xml
wearable/data/groups/: passkey_confirm.edc  passkey_confirm_popup.edc  passwd_popup.edc
wearable/debian/: changelog  control
wearable/src/: bt-syspopup.c  bt-syspopup.h
